--- a/src/component/prime/prime.scss
+++ b/src/component/prime/prime.scss
@@ -1,7 +1,3 @@
-:root {
-	--ux-color: #236aa4;
-	--ux-image-url: url("https://images.unsplash.com/photo-1490806230066-f7e6f7bf5052?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2ca889535ea01f912f94ac4ddf0034e0&auto=format&fit=crop&w=2233&q=80")
-}
 
 .container {
 	display: flex;
@@ -10,77 +6,27 @@
 	align-items: center;
 }
 
-.beaux {
-	font-size: 16rem;
-	font-weight: 900;
-	min-height: 19rem;
-	color: silver;
+.lds-circle {
+  display: inline-block;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border-radius: 50%;
+  background: #000;
+  animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
-
-@media (max-width: 1000px) {
-	.beaux {
-		font-size: 12rem;
-		min-height: 14rem;
-	}
-}
-
-@media (max-width: 750px) {
-	.beaux {
-		font-size: 8rem;
-		min-height: 10rem;
-	}
-}
-
-@media (max-width: 500px) {
-	.beaux {
-		font-size: 5rem;
-		min-height: 6rem;
-	}
-}
-
-.ux {
-    color: var(--ux-color);
-	-webkit-text-fill-color: transparent;
-	background: -webkit-linear-gradient(var(--ux-color), var(--ux-color)), var(--ux-image-url) repeat;
-	background: -o-linear-gradient(transparent, transparent);
-	-webkit-background-clip: text;
-	background-size: cover;
-}
-
-.cursor {
-	color: silver;
-	-webkit-text-fill-color: silver
-}
-
-.strap-line {
-	color: silver;
-	opacity: 0;
-	transition: opacity ease-in 1s;
-	font-weight: 200;
-	font-size: 2rem;
-}
-
-
-@media (max-width: 1000px) {
-	.strap-line{
-		font-size: 1.5rem;
-	}
-}
-
-@media (max-width: 750px) {
-	.strap-line{
-		font-size: 1.2rem;
-	}
-}
-
-@media (max-width: 500px) {
-	.strap-line{
-		font-size: 1rem;
-	}
-}
-
-
-.visible {
-	opacity: 1;
-	transition: opacity ease-in 1s;
+@keyframes lds-circle {
+  0%, 100% {
+    animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+  }
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(1800deg);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
+  100% {
+    transform: rotateY(3600deg);
+  }
 }
